# ShowMousePosition

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  showMainGui.py  window.ui
